tests/ui/impl-trait/issues/issue-87295.stderr
error[E0562]: `impl Trait` is not allowed in the type of variable bindings
  --> $DIR/issue-87295.rs:16:31
   |
LL |     let _do_not_waste: Struct<impl Trait<Output = i32>> = Struct::new(());
   |                               ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
